wisehands/admin/css/admin.css
/* ... */
.product-feedback-info {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.feedback-container .feedback-stars {
	margin-left: 0;
}

.product-feedback-text {
	margin-left: 72px;
	text-align: left;
}

.product-feedback-text p {
	font-size: 1rem;
	word-break: break-word;
}

.product-feedback-text h6 {
	font-weight: 400;
}

.admin-card-logo {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.upload-favicon, .upload-logo {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.upload-favicon img, .upload-logo img {
	max-width: 100%;
	object-fit: cover;
	max-height: 190px;
	margin: 1rem 0;
}

.upload-favicon i, .upload-logo i {
	margin-top: 1rem;
}

.delete-logo-favicon p {
	text-align: center;
	color: #039be5;
	cursor: pointer;
	line-height: 1.4;;
}

.delete-logo-favicon p:hover {
	color: #23527c;
}

.admin-card .upload-setting-img {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	padding: 0.5rem;
	text-align: center;
	border: 1px dashed #000;
	border-radius: 10px;
	width: 100%;
	height: 100%;
	margin: 1rem 0;
}

.admin-card .upload-info-text {
	margin: 1rem 0;
}

.admin-card .upload-info-text p {
	line-height: 1.3;
}

.admin-card .upload-setting-img:hover {
	cursor: pointer;
}

.settings-block .admin-card {
	height: 100%;
}

.settings-block .input-field label {
	left: 0;
}

.settings-footer-switch img {
	max-width: 100%;
	margin-top: 1rem;
}

.settings-footer-switch p {
	line-height: 1.3;
}

.boundaries-btn {
	display: inline-flex;
	background-color: #126471;
	padding: 0 2rem;
	text-align: center;
	color: #fff;
}

.link-to-product h4 {
	word-break: break-word;
}

.link-to-product:hover {
	cursor: pointer;
}

.external-link-img {
	width: 30px;
}

.add-category-block {
	width: 95%;
	margin: 0 auto;
}

.add-category-block .input-field label {
	left: 0;
	top: 1.5rem;
}

.add-category-row {
	display: block;
}

.add-category-block .add-category-row .input-field label {
	padding-left: 25px;
}

.add-category-row button {
	margin-right: 0;
}

.delivery-edit-message {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.delivery-edit-message button, .translation-flex-row button {
	min-width: 37px;
}

.delivery-message-label {
	font-weight: 400;
}

.translation-flex-row {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.translation-flex-row p {
	margin-right: 5px;
}

.translation-flex-row .input-field {
	width: 50px;
	margin-right: 10px;
}

.translation-flex-row input[type=text] {
	padding: 0 0 0 5px;
}

.translation-flex-column {
	display: flex;
	flex-direction: column;
}

.flex-baseline {
	display: flex;
	align-items: center;
}

.translation-flex-row .flex-row {
	align-items: center;
}

.translation-flex-row .flex-row p {
	padding-right: 10px;
}

.translation-flex-row .flex-row h4 {
	padding-right: 10px;
	word-break: break-word;
}

.admin-feedback-list {
	display: flex;
	flex-wrap: wrap;
}

.admin-feedback-list .admin-card {
	width: calc(50% - 30px);
	height: fit-content;
	max-width: 100%;
}

.admin-feedback-list .order-info {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.admin-feedback-list .feedback-to-all-order p {
	white-space: nowrap;
}

.admin-feedback-list a {
	color: black;
}

.admin-feedback-list .feedback-stars {
	min-width: 107px;
}

.admin-contacts-card-gps h4 {
	padding: 1rem;
}

.admin-contacts-card-gps {
	padding: 0;
}

.admin-contacts-card-gps img {
	width: 100%;
}

.admin-card .admin-contacts-card-no-gps p {
	padding: 1rem;
}

.shop-location-title {
	text-align: center;
}

.qr-code-block {
/*	align-items: center;*/
}

.no-qr-text, .no-feedback-text {
    font-size: 2.5em;
    text-align: center;
}

.pdd-rem {
	height: fit-content;
	padding: 0.8rem;
}

.break {
	overflow-wrap: break-word;
	word-wrap: break-word;
	hyphens: auto;
}

.qr-title-container {
	display: flex;
	align-items: center;
	margin: 15px 15px 0 15px;
}

.qr-detail-info {
	flex-direction: column;
	padding: 0 15px;
}

.qr-detail-info p {
	font-size: 1.5em;
	line-height: 1.8;
}

.qr-name-text {
	display: flex;
	justify-content: center;
}

.qr-name-text p {
	font-weight: 400;
	padding: 0 10px;
	margin: 0;
	font-size: 1.8em;
}

.img-present-qr {
	margin-top: 10px;
	width: 400px;
}

.qr-create-text {
	font-size: 20px;
	padding: 0px;
}

.qr-code-card {
	display: flex;
	justify-content: center;
	align-items: center;
}

.qr-code-card a {
	color: #000;
}

.qr-code-card .flex-column {
	margin-left: 0 !important;
	align-items: center;
}

.qr-code-card .admin-card {
	padding-top: 0;
}

.qr-code-card .admin-card .flex-column p {
	padding: 5px;
}

.qr-container {
	align-items: center;
}

.qr-new-container {
	display: flex;
	justify-content: space-between;
	align-items: flex-end;
}

.qr-row-bet {
	width: -webkit-fill-available;
	flex-direction: row;
	align-items: flex-end;
	padding: 0 20px;
}

.qr-column {
	display: flex;
	flex-direction: column;
}

.qr-column .qr-create-text {
	padding-bottom: 20px;
}

.qr-text-detail, .addition-title-img {
	display: flex;
	justify-content: space-between;
}

.qr-edit-text {
	display: flex;
	flex-direction: column;
	width: -webkit-fill-available;
	margin-bottom: 5px;
}

.img-qr-code {
    width: 200px;
    height: auto;
	margin: 5px;
}

.qr-input {
	width: 70%;
	padding-right: 20px;
}

.qr-input p {
	margin-bottom: 0;
}

.qr-button {
    align-self: center;
}

.qr-button button {
	padding: 1rem;
	width: fit-content;
	font-size: 1.3rem;
}

.qr-list-container {
	align-self: start;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;
}

.qr-breadcrumb {
	margin: 1rem;
}

.review-breadcrumb {
    margin: 1rem;
}

.m-l-r {
	padding: 0 20px;
}

.qr-edit {
	justify-content: space-between;
}

.qr-download-container {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.qr-download-text {
	font-size: 1.2rem;
}
/* ... */

